--- a/css/styles.css
+++ b/css/styles.css
@@ -49,9 +49,9 @@ h6 {
 }
 
 .container {
-    width: 100%;
     max-width: 1158px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 
@@ -59,7 +59,8 @@ h6 {
 /* Header */
 
 .header {
-    background-color: var(--color-main-bg);
+    border-bottom: 1px solid #E7E9FC;
+    padding: 24px 0;
 }
 
 .header-container {
@@ -76,6 +77,7 @@ h6 {
 
 .header-menu {
     display: flex;
+    gap: 40px;
 }
 
 .header-address {
@@ -95,8 +97,7 @@ h6 {
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: var(--leter-spacing-logo);
-    padding: 24px 0;
-    margin-right: 56px;
+    margin-right: 76px;
 }
 
 .accent {
@@ -107,7 +108,6 @@ h6 {
     color: var(--color-main);
     font-weight: 500;
     text-decoration: none;
-    padding: 24px 20px;
 }
 
 .nav-link:active {
@@ -160,6 +160,9 @@ h6 {
     color: var(--color-main-bg);
     margin-bottom: 48px;
     text-align: center;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .hero-button {
@@ -221,6 +224,7 @@ h6 {
 
 .section-text {
     color: var(--color-secondary);
+    margin: 0;
 }
 
 .team {
@@ -234,10 +238,14 @@ h6 {
 
 .team-item {
     flex-basis: calc((100% - 48px) / 4);
+    background-color: var(--color-main-bg);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .employee {
     text-align: center;
+    padding: 32px 0;
 }
 
 
@@ -263,6 +271,7 @@ h6 {
 .footer-text {
     color: #E7E9FC;
     margin-top: 16px;
+    width: 264px;
 }
 
 
@@ -346,6 +355,7 @@ h6 {
 
 .design-text {
     color: var(--color-secondary);
+    margin-bottom: 0;
 }
 
 .design-list {
@@ -358,5 +368,11 @@ h6 {
 }
 
 .design-item {
-    flex-basis: calc((100% - 48px) /9);
+    flex-basis: calc((100% - 48px) /3);
+    background-color: var(--color-main-bg);
+    border: 1px solid #E7E9FC;
+}
+
+.design-examples {
+    padding: 32px 16px;
 }
