--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ h6 {
     color: var(--color-main-bg);
     margin-bottom: 48px;
     text-align: center;
-    width: 500px;
+    width: 496px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -294,7 +294,7 @@ h6 {
     display: flex;
     gap: 24px;
     justify-content: center;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .search {
@@ -360,15 +360,21 @@ h6 {
 
 .design-list {
     display: flex;
+    flex-wrap: wrap;
     row-gap: 48px;
     column-gap: 24px;
-    justify-content: center;
 }
 
 .design-item {
-    flex-basis: calc((100% - 48px)/3);
+    flex-basis: calc((100% - 48px) / 3);
     background-color: var(--color-main-bg);
     border: 1px solid #E7E9FC;
+}
+
+.design-img {
+    max-width: 100%;
+    display: block;
+    height: auto;
 }
 
 .design-examples {
